added: second proj details

--- a/index.html
+++ b/index.html
@@ -7,6 +7,13 @@
 </head>
 <body>
     <h1>Thomas Demkowski</h1>
-    <p>Testing github pages</p>
+    <h3>First proj</h3>
+    <a href="http://acurac.herokuapp.com">acurac.herokuapp.com</a>
+
+    <h3>Second proj</h3>
+    <p>React Frontend</p>
+    <a href="http://acurac-react-frontend.s3-website.eu-central-1.amazonaws.com/">http://acurac-react-frontend.s3-website.eu-central-1.amazonaws.com/</a>
+    <p>Node.js backend</p>
+    <a href="https://acurac-post-backend.herokuapp.com/">https://acurac-post-backend.herokuapp.com/</a>
 </body>
 </html>
