forgot to include mocha in a description

--- a/index.html
+++ b/index.html
@@ -275,7 +275,7 @@
               Using Mailgun, clients who sign-up will have a confirmation email sent to them by the Store. Users who want their password reset are emailed a link with a generated token (using the Json Web Token library) giving them access to changing their password.
             </p>
             <p>
-              There is user authentication (such as CSRF tokens) to give access or restrict users from interacting with what they should or should not be able to. I use express-validator to handle all routes. Sinon and Chain were used for unit testing the backend controllers.
+              There is user authentication (such as CSRF tokens) to give access or restrict users from interacting with what they should or should not be able to. I use express-validator to handle all routes. Mocha, Sinon and Chain were used for unit testing the backend controllers.
             </p>
           </div>
 
