hid accordion project

--- a/index.html
+++ b/index.html
@@ -320,7 +320,7 @@
 
         <div class="project_item">
           <div class=project_item_details>
-            <h3>Instagram Clone</h3>
+            <h3>Instagram Clone (in development)</h3>
             <p>Source code</p>
             <a href="https://github.com/tdemkowski/Instagram-Clone" target="_blank">
               <strong>https://github.com/tdemkowski/Instagram-Clone</strong>
@@ -335,7 +335,7 @@
           </div>
         </div>
 
-        <div class="project_item">
+        <!-- <div class="project_item">
           <div class=project_item_details>
             <h3>Accordion</h3>
             <a href="https://codepen.io/tdemkowski/pen/gOrNwzG" target="_blank">
@@ -347,7 +347,7 @@
           <div class="image">
             <img src="https://i.imgur.com/jfU7btt.png" alt="" draggable="false">
           </div>
-        </div>
+        </div> -->
 
         <div class="project_item">
           <div class=project_item_details>
