--- a/index.html
+++ b/index.html
@@ -236,8 +236,8 @@
           <li>
             B.Sc. Mathematics - Macquarie University, Norde Ryde
           </li>
-          <li>My <a href="https://tdemkowski.github.io/CV.pdf" target="_blank">
-            <strong>Curriculum Vitae</strong></a>
+          <li>Here is my <a href="https://tdemkowski.github.io/CV.pdf" target="_blank">
+            <strong>CV</strong></a>
           </li>
         </ul>
         <p>
